[project]
name = "ecg-anomaly-detection"
version = "0.1.0"
description = "Deep learning for ECG anomaly detection"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "scipy",
    "wfdb",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
